--- a/python_numpy/0222/a_numpy_array.ipynb
+++ b/python_numpy/0222/a_numpy_array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "       [0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "       [0., 0.]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "       [[0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[49], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m reshape_array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy_array\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 배열의 길이가 달라 계산할 수 없는 에러 발생\u001b[39;00m\n\u001b[0;32m      2\u001b[0m reshape_array\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m reshape_array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy_array\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 배열의 길이가 달라 계산할 수 없는 에러 발생\u001b[39;00m\n\u001b[0;32m      2\u001b[0m reshape_array\n",
       "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 12 into shape (5,2)"
      ]
     }
@@ -176,9 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 12 into shape (5,newaxis)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m reshape_array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy_array\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 배열의 길이가 달라 계산할 수 없는 에러 발생\u001b[39;00m\n\u001b[0;32m      2\u001b[0m reshape_array\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 12 into shape (5,newaxis)"
+     ]
+    }
+   ],
    "source": [
     "reshape_array = numpy_array.reshape(5, -1) # 배열의 길이가 달라 계산할 수 없는 에러 발생\n",
     "reshape_array"
@@ -193,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +216,7 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +237,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,16 +343,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 배열 연결하기\n",
-    "행의 수나 열의 수가 같은 두개 이상의 배열을 연결하는 방법\n",
-    "- `hstack` : 행의 수가 같은 두 개 이상의 배열을 연결\n",
-    "- `vstack` : 열의 수가 같은 두 개 이상의 배열을 연결\n",
-    "- `dstack` : 행과 열의 수가 같은 두 개 이상의 배열을 연결"
+    "#### 배열 연결하기  \n",
+    "##### 행의 수나 열의 수가 같은 두개 이상의 배열을 연결하는 방법  \n",
+    "###### - `hstack` : 행의 수가 같은 두 개 이상의 배열을 연결  \n",
+    "###### - `vstack` : 열의 수가 같은 두 개 이상의 배열을 연결  \n",
+    "###### - `dstack` : 행과 열의 수가 같은 두 개 이상의 배열을 연결  \n",
+    "###### - `stack` : dstack의 확장 기능으로 행과 열의 수가 같은 두 개 이상의 배열을 연결  \n",
+    "###### 단, 연결 축을 개발자가 직접 지정  \n",
+    "###### - `r_` : 배열의 요소를 연결, 메서드 인자를 `[]`에 전달함  \n",
+    "###### - `c_` : 행끼리 연결, 최소 2차원의 배열로 연결  \n",
+    "###### - `tile` : 하나의 배열을 여러번 반복하여 연결  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,30 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zeros_array = np.zeros((3, 3))\n",
-    "zeros_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,22 +529,300 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[0., 0., 0.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[0., 0., 0.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack_array = np.stack([zeros_array, ones_array], axis=1)\n",
+    "stack_array"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_array = np.r_[zeros_array, ones_array]\n",
+    "r_array"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1., 1., 1.],\n",
+       "       [0., 0., 0., 1., 1., 1.],\n",
+       "       [0., 0., 0., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_array = np.c_[zeros_array, ones_array]\n",
+    "c_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tile_array = np.tile(zeros_array, 2)\n",
+    "tile_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tile_array = np.tile(zeros_array, (3, 2)) # 행은 *3 열은 *2가 됨.\n",
+    "tile_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array = np.array([[0., 0., 0., 1., 1.],\n",
+    "      [0., 0., 0., 1., 1.],\n",
+    "      [0., 0., 0., 1., 1.],\n",
+    "      [10., 20., 30., 40., 50.],\n",
+    "      [60., 70., 80., 90., 100.],\n",
+    "      [110., 120.,130., 140., 150.],\n",
+    "      [0., 0., 0., 1., 1.],\n",
+    "      [0., 0., 0., 1., 1.],\n",
+    "      [0., 0., 0., 1., 1.],\n",
+    "      [10., 20., 30., 40., 50.],\n",
+    "      [60., 70., 80., 90., 100.],\n",
+    "      [110., 120., 130., 140., 150.]])\n",
+    "test_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test1_array = np.zeros((3, 3))\n",
+    "test2_array = np.ones((3, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1., 1.],\n",
+       "       [0., 0., 0., 1., 1.],\n",
+       "       [0., 0., 0., 1., 1.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_array = np.hstack([test1_array, test2_array])\n",
+    "a_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 10,  20,  30,  40,  50,  60,  70,  80,  90, 100, 110, 120, 130,\n",
+       "       140, 150])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test3_array = np.arange(10, 160, 10)\n",
+    "test3_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30,  40,  50],\n",
+       "       [ 60,  70,  80,  90, 100],\n",
+       "       [110, 120, 130, 140, 150]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_array = test3_array.reshape(3, 5)\n",
+    "b_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  0.,   0.,   0.,   1.,   1.],\n",
+       "        [  0.,   0.,   0.,   1.,   1.],\n",
+       "        [  0.,   0.,   0.,   1.,   1.]],\n",
+       "\n",
+       "       [[ 10.,  20.,  30.,  40.,  50.],\n",
+       "        [ 60.,  70.,  80.,  90., 100.],\n",
+       "        [110., 120., 130., 140., 150.]]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_array = np.stack([a_array,b_array])\n",
+    "c_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,   0.,   0.,   1.,   1.,   0.,   0.,   0.,   1.,   1.,   0.,\n",
+       "         0.,   0.,   1.,   1.,  10.,  20.,  30.,  40.,  50.,  60.,  70.,\n",
+       "        80.,  90., 100., 110., 120., 130., 140., 150.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_array.ravel()"
+   ]
   }
  ],
  "metadata": {
