--- a/python_numpy/0222/a_numpy_array.ipynb
+++ b/python_numpy/0222/a_numpy_array.ipynb
@@ -699,6 +699,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -777,51 +806,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[  0.,   0.,   0.,   1.,   1.],\n",
-       "        [  0.,   0.,   0.,   1.,   1.],\n",
-       "        [  0.,   0.,   0.,   1.,   1.]],\n",
-       "\n",
-       "       [[ 10.,  20.,  30.,  40.,  50.],\n",
-       "        [ 60.,  70.,  80.,  90., 100.],\n",
-       "        [110., 120., 130., 140., 150.]]])"
+       "array([[  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c_array = np.stack([a_array,b_array])\n",
+    "c_array = np.vstack([a_array,b_array])\n",
     "c_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  0.,   0.,   0.,   1.,   1.,   0.,   0.,   0.,   1.,   1.,   0.,\n",
-       "         0.,   0.,   1.,   1.,  10.,  20.,  30.,  40.,  50.,  60.,  70.,\n",
-       "        80.,  90., 100., 110., 120., 130., 140., 150.])"
+       "array([[  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [  0.,   0.,   0.,   1.,   1.],\n",
+       "       [ 10.,  20.,  30.,  40.,  50.],\n",
+       "       [ 60.,  70.,  80.,  90., 100.],\n",
+       "       [110., 120., 130., 140., 150.]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c_array.ravel()"
+    "tile_array = np.tile(c_array, (2, 1))\n",
+    "tile_array"
    ]
   }
  ],
