--- a/python_basic/0215/b_first_jupyter.ipynb
+++ b/python_basic/0215/b_first_jupyter.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,6 +615,26 @@
    ],
    "source": [
     "f'[{number:0>15}]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[     12345     ]'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'[{number:^15}]'"
    ]
   }
  ],
