--- a/python_numpy/0223/a_numpy.ipynb
+++ b/python_numpy/0223/a_numpy.ipynb
@@ -334,6 +334,441 @@
     "random_array = np.random.rand(10)\n",
     "random_array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 데이터 순서를 임의로 바꾸기\n",
+    "numpy 패키지의 random 하위 패키지의 `shuffle()` 메서드로 배열을 임의 순서로 변경 가능(자체 변환)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range_array = np.arange(10)\n",
+    "range_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 8, 2, 5, 4, 9, 7, 3, 6])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.shuffle(range_array)\n",
+    "range_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.choice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 데이터 샘플링\n",
+    "모집단 배열에 표본으로 사용할 표본 배열을 무작위로 선택하는 방법  \n",
+    "numpy 패키지의 random 하위 패키지의   \n",
+    "`choice(모집단배열, 표본크기, 중복선택여부, 각요소의선택 확률)` 메서드로 사용가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population_array = np.arange(10)\n",
+    "population_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 6, 8, 1, 4])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_array = np.random.choice(population_array, 5)\n",
+    "sample_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 4, 9, 3, 8])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_array = np.random.choice(population_array, 5, replace=False)\n",
+    "sample_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 0, 6, ..., 4, 1, 0])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_array = [0.1, 0.05, 0.05, 0, 0.15, 0.25, 0.1, 0.05, 0.05, 0.2]\n",
+    "sample_array = np.random.choice(population_array, 10000, p=probability_array)\n",
+    "sample_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_array = np.random.choice(population_array, 12, replace=False) \n",
+    "# 배열 사이즈를 기존 배열보다 크게 하고 중복허용안하면 오류 발생\n",
+    "sample_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_array = [0.1, 0.05, 0.05, 0, 0.15, 0.25, 0.1, 0.05, 0.05, 0.4] \n",
+    "# 확률이 1을 안되거나 배열의 크기와 맞지 않는 경우 오류 발생\n",
+    "sample_array = np.random.choice(population_array, 10000, p=probability_array)\n",
+    "sample_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 난수 배열 생성\n",
+    "- `rand()` : 0과 1사이의 균일 분포를 따르는 난수 배열 생성  \n",
+    "- `randn()` : 표준 정규 분포를 따르는 난수 배열 생성  \n",
+    "- `randint(low, high=정수, size=정수 혹은 튜플)` : 지정한 범위 정수의 균일 분포를 따르는 난수 배열 생성 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.73950859, 0.15608666, 0.72254684, 0.68459275, 0.20313433,\n",
+       "       0.88582224, 0.17850941, 0.5124593 , 0.48660034, 0.7583373 ])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_array = np.random.rand(10)\n",
+    "rand_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.34801642, -0.9914195 , -0.49725474, -0.81662748,  1.00224656,\n",
+       "       -0.60753649, -2.39624045,  1.2703827 ,  1.50417907,  0.15095708])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randn_array = np.random.randn(10)\n",
+    "randn_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randint_array = np.random.randint(10)\n",
+    "randint_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 1, 4, 0, 4, 3, 8, 1, 2])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randint_array = np.random.randint(10, size=10)\n",
+    "randint_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 10, 10, 18, 15],\n",
+       "       [19, 12, 16, 16, 12],\n",
+       "       [14, 14, 11, 19, 11]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randint_array = np.random.randint(10, 20, (3, 5))\n",
+    "randint_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정수 데이터 카운팅\n",
+    "배열의 요소가 정수이면 `unique()` 메서드나 `bincount()`메서드로 간단하게 분석할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_array = np.unique(sample_array)\n",
+    "analysis_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2, 4, 5, 6, 7, 8, 9]),\n",
+       " array([1029,  516,  509, 1462, 2458,  992,  478,  514, 2042], dtype=int64))"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_array = np.unique(sample_array, return_counts=True)\n",
+    "analysis_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1029,  516,  509,    0, 1462, 2458,  992,  478,  514, 2042],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_array = np.bincount(sample_array, minlength=10)\n",
+    "analysis_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 1, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coin_percent = np.random.randint(2, size= 10)\n",
+    "coin_percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 5, 3, 1, 6, 4, 5, 3, 6, 6, 2, 6, 5, 3, 1, 6, 6, 4, 3, 6, 4,\n",
+       "       4, 3, 6, 3, 1, 3, 2, 2, 4, 4, 6, 5, 1, 3, 5, 3, 4, 5, 6, 2, 2, 2,\n",
+       "       4, 3, 6, 3, 3, 3, 6, 6, 1, 6, 1, 1, 2, 5, 6, 6, 5, 4, 6, 1, 4, 2,\n",
+       "       4, 6, 4, 1, 6, 2, 4, 2, 4, 4, 2, 5, 5, 2, 3, 3, 2, 3, 5, 6, 2, 3,\n",
+       "       1, 2, 6, 2, 3, 2, 2, 4, 6, 5, 2, 4])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice = np.random.randint(1, 7, 100)\n",
+    "dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.67"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(dice)"
+   ]
   }
  ],
  "metadata": {
