--- a/python_numpy/0223/a_numpy.ipynb
+++ b/python_numpy/0223/a_numpy.ipynb
@@ -769,6 +769,70 @@
    "source": [
     "np.mean(dice)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9991,  9952, 10098, 10142, 10161, 10252, 10341, 10244, 10347,\n",
+       "       10336, 10197, 10124,  9776,  9756,  9803,  9800,  9725,  9714,\n",
+       "        9769,  9818,  9812,  9730,  9611,  9453,  9426,  9287,  9459,\n",
+       "        9515,  9565,  9564,  9479,  9595,  9607,  9651,  9520,  9428,\n",
+       "        9543,  9616,  9622,  9796,  9747,  9946,  9785,  9805,  9815,\n",
+       "        9758,  9769,  9882,  9844,  9819,  9758,  9738,  9876,  9876,\n",
+       "        9842,  9641,  9604,  9718,  9886,  9980,  9988,  9985,  9990,\n",
+       "       10145, 10052, 10094, 10077, 10077,  9991, 10085, 10110, 10053,\n",
+       "       10127, 10173, 10238, 10289, 10371, 10315, 10301, 10501, 10549,\n",
+       "       10744, 10927, 10954, 11274, 11222, 11349, 11299, 11383, 11410,\n",
+       "       11329, 11236, 11183, 11109, 11056, 11028, 11158, 11151, 11283,\n",
+       "       11206, 11111, 11190, 11459, 11454, 11362, 11197, 11160, 11138,\n",
+       "       11236, 11308, 11273, 11365, 11249, 11239, 11169, 11064, 11161,\n",
+       "       11128, 10973, 10954, 10689, 10711, 10651, 10736, 10610, 10597,\n",
+       "       10566, 10592, 10650, 10703, 10742, 10707, 10735, 10813, 10783,\n",
+       "       10897, 10864, 10892, 10787, 10881, 10794, 10735, 10715, 10656,\n",
+       "       10559, 10603, 10627, 10641, 10622, 10527, 10585, 10517, 10557,\n",
+       "       10266, 10294, 10251, 10228, 10099, 10141, 10064, 10075, 10012,\n",
+       "       10057,  9913,  9828,  9936,  9963,  9935, 10001,  9940,  9891,\n",
+       "        9767,  9760,  9804,  9777,  9848,  9699,  9715,  9658,  9599,\n",
+       "        9601,  9499,  9538,  9611,  9619,  9607,  9720,  9853,  9806,\n",
+       "        9719,  9624,  9595,  9560,  9620,  9644,  9680,  9800,  9814,\n",
+       "        9821,  9913,  9949,  9966,  9813, 10072, 10300, 10339, 10439,\n",
+       "       10456, 10297, 10390, 10463, 10457, 10401, 10445, 10366, 10245,\n",
+       "       10226, 10255, 10264, 10127, 10193, 10137,  9965, 10081, 10136,\n",
+       "       10174,  9965,  9892,  9898,  9976,  9997, 10071, 10166, 10229,\n",
+       "       10092, 10141, 10074,  9933,  9924,  9906,  9754,  9856,  9847,\n",
+       "        9796,  9769,  9910,  9780,  9802, 10042,  9937])"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price = 10000\n",
+    "\n",
+    "variation_ranges = (np.random.randn(250) / 100) + 1\n",
+    "stock_prices = []\n",
+    "\n",
+    "for ratio in variation_ranges:\n",
+    "  price = round(price*round(ratio, 4))\n",
+    "  stock_prices.append(price)\n",
+    "\n",
+    "stock_prices = np.array(stock_prices)\n",
+    "stock_prices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
