--- a/pandas_data_analysis/0223/a_pandas.class.ipynb
+++ b/pandas_data_analysis/0223/a_pandas.class.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,25 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "홍길동     85\n",
-       "김철수     70\n",
-       "이영희    100\n",
-       "최민수     90\n",
-       "박지성     55\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# index를 지정하지 않으면 0부터 시작하는 정수의 인덱스 값이 자동으로 생성됨\n",
     "scores = pd.Series([85, 70, 100, 90, 55], index=['홍길동', '김철수', '이영희', '최민수', '박지성'])\n",
@@ -81,40 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['홍길동', '김철수', '이영희', '최민수', '박지성'], dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 85,  70, 100,  90,  55], dtype=int64)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores.values"
    ]
@@ -129,26 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "이름\n",
-       "홍길동     85\n",
-       "김철수     70\n",
-       "이영희    100\n",
-       "최민수     90\n",
-       "박지성     55\n",
-       "Name: 점수, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores.name = '점수'\n",
     "scores.index.name = '이름'\n",
@@ -157,25 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "홍길동     85\n",
-       "김철수     70\n",
-       "이영희    100\n",
-       "최민수     90\n",
-       "홍길동     55\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores = pd.Series([85, 70, 100, 90, 55], index=['홍길동', '김철수', '이영희', '최민수', '홍길동'])\n",
     "scores"
@@ -192,82 +121,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "홍길동    34.0\n",
-       "김철수    28.0\n",
-       "이영희    40.0\n",
-       "최민수    36.0\n",
-       "홍길동    22.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores * 0.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "홍길동     True\n",
-       "김철수     True\n",
-       "이영희     True\n",
-       "최민수     True\n",
-       "홍길동    False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores >= 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "홍길동    17.0\n",
-       "김철수    14.0\n",
-       "이영희    20.0\n",
-       "최민수    18.0\n",
-       "홍길동    11.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores * 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,26 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "김철수    170.0\n",
-       "박지성      NaN\n",
-       "이영희    190.0\n",
-       "최민수    160.0\n",
-       "홍길동    145.0\n",
-       "홍길동    115.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores + scores2"
    ]
@@ -312,31 +176,350 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[1], scores['김철수'] # 인덱스, 값 둘다 접근 가능하나 값으로 접근이 좋은듯.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "배열 인덱싱을 사용하여 자료의 순서를 바꾸거나 특정한 자료만 선택하여 시리즈 객체를 생성할 수 있음  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[[0, 3, 1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[['홍길동', '최민수', '김철수']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[scores < 70]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시리즈 객체도 슬라이싱이 가능한데  \n",
+    ", 인덱스의 이름(라벨)으로 슬라이싱 할 때는   \n",
+    "인덱스 번호로 슬라이싱 할 때와 다르게 **마지막 인덱스 값도 포함해서 반환**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores[1:3] # 마지막인덱스 포함 안함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores['김철수':'최민수'] # 마지막 인덱스값도 포함됨 - '최민수'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시리즈 객체의 라벨이 영문자로 이루어져 있다면  \n",
+    ", 객체의 속성에 접근하는 것과 같은 방법으로 접근할 수 있음  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s0 = pd.Series(range(3), index=[\"a\", \"b\", \"c\"])\n",
+    "s0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s0.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s0.b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 시리즈와 딕셔너리\n",
+    "시리즈는 인덱스의 이름(라벨)과 값이 한쌍으로 이루어져서 관리되어 지는데  \n",
+    ", 이는 파이썬의 기본 자료 구조인 키와 값을 한쌍으로 관리하는 딕셔너리와 비슷함  \n",
+    "\n",
+    "시리즈 객체도 딕셔너리에서 사용가능한 `in` 연산과 `item()`메서드를 사용할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"이재용\" in scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"홍길동\" in scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, value in scores.items():\n",
+    "  print(f'{label}:{value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시리즈 객체는 딕셔너리 객체로 직접 생성할 수 있음  \n",
+    "파이썬 3.6 부터 딕셔너리 객체는 순서가 보장됨  \n",
+    "\n",
+    "만약, 순서를 결정하고 싶다면 `index` 매개변수에   \n",
+    "순서를 정한 인덱스 배열 또는 리스트를 전달 해야함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_16744\\3808992018.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  scores[1], scores['김철수']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(70, 70)"
+       "홍길동     60\n",
+       "김철수     90\n",
+       "이재용    100\n",
+       "권지용     75\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores[1], scores['김철수']"
+    "scores2 = pd.Series({'홍길동': 60, '김철수': 90, '이재용': 100, '권지용': 75})\n",
+    "scores2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "권지용     75\n",
+       "김철수     90\n",
+       "이재용    100\n",
+       "홍길동     60\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores2 = pd.Series({'홍길동': 60, '김철수': 90, '이재용': 100, '권지용': 75}, index= ['권지용','김철수','이재용','홍길동'] )\n",
+    "scores2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 인덱스 기반 연산\n",
+    "두 시리즈 객체간에 연산을 진행하면 인덱스가 같은 데이터에 대해서만 연산을 진행함  \n",
+    "시리즈 모두에 존재하지 않는 인덱스 `NaN`으로 표시 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums = scores - scores2\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "값들 끼리의 연산에서는 동일하게 존재하는 인덱스의 값들에 대해서만 나타남  \n",
+    "(길이가 다른 값들에 대해서는 연산 불가)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores.values + scores2.values # 길이가 달라서 연산이 안됨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "시리즈 객체에서 값이 `NaN`인지 아닌지구하려면 `notnull()`메서드를 사용할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums.notnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums[score_sums.notnull()] # 배열로 가져오면 NaN이 아닌 인덱스, 값만 가져올 수 있음"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 데이터 갱신, 추가, 삭제\n",
+    "딕셔너리와 같은 방법으로 데이터를 갱신, 추가, 삭제를 할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums['김철수'] = 120\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums['남궁선'] = 100\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del score_sums['이재용']\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_sums.pop('최민수')\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "권지용      NaN\n",
+       "김철수    120.0\n",
+       "이영희      NaN\n",
+       "남궁선    100.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_sums.pop('홍길동')\n",
+    "score_sums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
