--- a/pandas_data_analysis/0223/a_pandas.class.ipynb
+++ b/pandas_data_analysis/0223/a_pandas.class.ipynb
@@ -391,9 +391,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "권지용     NaN\n",
+       "김철수   -20.0\n",
+       "이영희     NaN\n",
+       "이재용     NaN\n",
+       "최민수     NaN\n",
+       "홍길동    25.0\n",
+       "홍길동    -5.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums = scores - scores2\n",
     "score_sums"
@@ -425,18 +443,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "권지용    False\n",
+       "김철수     True\n",
+       "이영희    False\n",
+       "이재용    False\n",
+       "최민수    False\n",
+       "홍길동     True\n",
+       "홍길동     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums.notnull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "김철수   -20.0\n",
+       "홍길동    25.0\n",
+       "홍길동    -5.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score_sums[score_sums.notnull()] # 배열로 가져오면 NaN이 아닌 인덱스, 값만 가져올 수 있음"
    ]
@@ -516,10 +566,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "store1 = pd.Series({'apple':500, 'banana':3000, 'carrot':1000})\n",
+    "store2 = pd.Series({'apple':800, 'banana':2500, 'dabai':5000})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple      500\n",
+       "banana    3000\n",
+       "carrot    1000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple     1300.0\n",
+       "banana    5500.0\n",
+       "carrot       NaN\n",
+       "dabai        NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = store1 + store2\n",
+    "result1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple    -300.0\n",
+       "banana    500.0\n",
+       "carrot      NaN\n",
+       "dabai       NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2 = store1 - store2\n",
+    "result2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple     1300.0\n",
+       "banana    5500.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result3 = result1[result1.notnull()]\n",
+    "result3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple    -300.0\n",
+       "banana    500.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result4 = result2[result2.notnull()]\n",
+    "result4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -300,   500, -4000], dtype=int64)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store1.values - store2.values"
+   ]
   }
  ],
  "metadata": {
