--- a/matplotlib_visualize_data/0304/b_matplotlib_variety_plots.ipynb
+++ b/matplotlib_visualize_data/0304/b_matplotlib_variety_plots.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "#### 바 차트(막대 그래프)  \n",
     "x 축의 값이 분류가 가능한 카테고리 형태일 때 `bar()`, `barh()` 메서드로 막대 그래프를 표시할 수 있음  \n",
-    "주의! bar 메서드는 y축의 값이 첫번째 인수로 옴"
+    "주의! bar 메서드는 x축의 값이 첫번째 인수로 옴"
    ]
   },
   {
